# quell

./: CLAUDE.md  CMakeLists.txt  final_check.cpp  test_simple.cpp
backend/: Backend.hpp  Instruction.hpp  Register.cpp  Register.hpp
backend/classical/: ClassicalRegister.cpp  ClassicalRegister.hpp
backend/quantum/: QuantumRegister.cpp  QuantumRegister.hpp  Statevector.cpp  Statevector.hpp
backend/vm/: Instruction.hpp  Program.hpp  StackFrame.hpp  VM.cpp  VM.hpp
datastructs/: Circuit.cpp  Circuit.hpp  Complex.cpp  Complex.hpp  DynamicArray.hpp  DynamicArray.tpp  HashTable.hpp  HashTable.tpp  Matrix.cpp  Matrix.hpp  RNG.cpp  RNG.hpp  Register.cpp  Stack.hpp  Stack.tpp  StateVector.cpp  StateVector.hpp  String.cpp  String.hpp
documentation/: README.md  implementation_plan.md  quell_formal_grammar.txt
tests/: test_circuit.cpp  test_complex.cpp  test_dynamic_array.cpp  test_hash_table.cpp  test_matrix.cpp  test_register.cpp  test_rng.cpp  test_stack.cpp  test_statevector.cpp  test_string.cpp
tests/backend/vm/: test_instruction.cpp  test_vm.cpp
